2010-06-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    Account the number of created interfaces and subinterfaces,
	    and if there is just one and no callsign has been defined,
	    only then supply a default value ("callsign $mycall").

	* interface.c:
	    Check interface callsigns to be unique.

	* aprsis.c, beacon.c, digipeater.c, interface.c, telemetry.c:
	    Recognize "$mycall" in case insensitive matching.

2010-06-22  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c:
	    Version tocall code: APRX1L

	* digipeater.c:
	    If there is a viscous-delay defined, add a random value of 0..2
	    to the configured number of seconds delay.
	    This way similarly configured adjacent Tx-iGates can at random
	    find a first transmitter and others will drop the Tx-iGate.

	* digipeater.c:
	    Digipeater didn't detect interface callsigns and aliases properly,
	    when determining if there is some work to be done.  It did detect
	    them when to avoid doing duplicate work.

2010-06-19  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, aprx.h, aprsis.c, beacon.c, config.c, digipeater.c,
	  interface.c, telemetry.c, ttyreader.c:
	    Improve config file parsing error reporting.
	    Any ERROR observed on configuration parsing causes immediate
	    abort with exit-code 1.

	* aprx.conf.in, aprx-complex.conf.in, aprx.8.in:
	    Clarify the documentation at man-page, and at config templates.

	* firmware/*
	    Copied one source of TNC2 firmwares

	* windows/*
	    Just a placeholder.

	* Makefile.in:
	    Improving "make dist" behaviour.

2010-06-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, doc/aprx-manual.odt:
	    Some notes on available baud-rates, fixes on
	    documentation about CRC algorithms.

	* ttyreader.c:
	    Missed baud speed 57600.

	* dupecheck.c:
	    Shrink the arena allocation size to 4 kB.  This allows
	    14 reference packets in the dupecheck dataset within that