@@ -1,3 +1,10 @@
+2010-07-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* config.c:
+	    Accept valid APRSIS login callsigns for "mycall" parameter
+	    value.  Will complain latter if end usage did want valid AX.25
+	    callsigns instead.
+
 2010-06-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* interface.c:
